data/derived/comb/progs/unify/prog6504.ml.out
Characters 80-91:
  |Sine(e)->sin(pi*.eval(e,x,y))
                    ^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
